--- a/src/Game/main_menu.fxml
+++ b/src/Game/main_menu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
@@ -23,20 +24,40 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ChoiceBox layoutX="26.0" layoutY="42.0" prefWidth="150.0" />
+                  <ChoiceBox fx:id="gameModeBox" layoutX="26.0" layoutY="42.0" prefWidth="150.0" />
                   <Label layoutX="52.0" layoutY="77.0" text="P s e u d o s">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <TextField alignment="CENTER" layoutX="26.0" layoutY="111.0" style="-fx-background-color: #FF1000;" text="Player 1" />
-                  <TextField alignment="CENTER" layoutX="25.0" layoutY="144.0" style="-fx-background-color: #00FF73;" text="Player 2" />
-                  <Button layoutX="52.0" layoutY="188.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Play !" />
+                  <TextField fx:id="pseudo1" alignment="CENTER" layoutX="26.0" layoutY="111.0" promptText="Player 1" style="-fx-background-color: #FF1000;" />
+                  <TextField fx:id="pseudo2" alignment="CENTER" layoutX="25.0" layoutY="144.0" promptText="Player 2" style="-fx-background-color: #00FF73;" />
+                  <Button fx:id="playButton" layoutX="52.0" layoutY="188.0" mnemonicParsing="false" onAction="#startGame" prefHeight="25.0" prefWidth="96.0" text="Play !" />
                </children>
                <effect>
                   <DropShadow />
                </effect>
             </Pane>
+            <ImageView fx:id="player1Cross1" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="109.0">
+               <image>
+                  <Image url="@../../res/sprites/cross.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="player1Cross2" fitHeight="30.0" fitWidth="30.0" layoutX="60.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="109.0">
+               <image>
+                  <Image url="@../../res/sprites/cross.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="player2Circle1" fitHeight="30.0" fitWidth="30.0" layoutX="60.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="142.0">
+               <image>
+                  <Image url="@../../res/sprites/circle.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="player2Circle2" fitHeight="30.0" fitWidth="30.0" layoutX="60.0" layoutY="157.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="142.0">
+               <image>
+                  <Image url="@../../res/sprites/circle.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
