--- a/src/Game/options.fxml
+++ b/src/Game/options.fxml
@@ -5,54 +5,63 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Game.OptionsController">
-   <Label alignment="CENTER" layoutX="238.0" layoutY="25.0" prefWidth="200.0" text="OPTIONS" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="15.0">
+   <Label alignment="CENTER" layoutX="238.0" layoutY="25.0" prefWidth="200.0" text="OPTIONS" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="20.0">
       <font>
          <Font name="Consolas Bold" size="32.0" />
       </font>
    </Label>
-   <Button layoutX="426.0" layoutY="22.0" mnemonicParsing="false" onAction="#loadMainMenu" prefWidth="150.0" style="-fx-background-color: #FFAAAA;" text="Back to main menu">
+   <Button fx:id="backToMainMenuButton" layoutX="426.0" layoutY="27.0" mnemonicParsing="false" onAction="#loadMainMenu" prefWidth="150.0" style="-fx-background-color: #FFAAAA;" text="Back to main menu">
       <font>
          <Font name="Consolas" size="12.0" />
       </font>
    </Button>
-   <AnchorPane layoutY="100.0" AnchorPane.bottomAnchor="215.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="55.0">
-      <Label prefHeight="25.0" text="Game board rows:" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+   <AnchorPane layoutY="100.0" AnchorPane.bottomAnchor="235.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="70.0">
+      <Label prefHeight="25.0" text="Game board rows/columns:" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font name="Consolas" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="159.0" layoutY="20.0" prefHeight="25.0" text="Game board columns:" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="45.0">
+      <Label layoutX="133.0" layoutY="55.0" prefHeight="25.0" text="Winning combo:" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0">
          <font>
             <Font name="Consolas" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="133.0" layoutY="55.0" prefHeight="25.0" text="Winning combo:" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="80.0">
-         <font>
-            <Font name="Consolas" size="16.0" />
-         </font>
-      </Label>
-      <Button layoutX="238.0" layoutY="116.0" mnemonicParsing="false" style="-fx-background-color: #99FF99;" text="Save" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="5.0">
+      <Button layoutX="238.0" layoutY="116.0" mnemonicParsing="false" onAction="#saveOptions" style="-fx-background-color: #99FF99;" text="Save" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="5.0">
          <font>
             <Font name="Consolas Bold" size="12.0" />
          </font>
       </Button>
    </AnchorPane>
-   <AnchorPane layoutX="300.0" layoutY="100.0" AnchorPane.bottomAnchor="215.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="55.0">
-      <TextField fx:id="rowsEntry" prefWidth="50.0" promptText="3" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
-      <TextField fx:id="columnsEntry" layoutX="20.0" layoutY="20.0" prefWidth="50.0" promptText="3" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="45.0" />
-      <TextField fx:id="comboEntry" layoutX="20.0" layoutY="55.0" prefWidth="50.0" promptText="3" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="80.0" />
-      <Button layoutX="20.0" layoutY="118.0" mnemonicParsing="false" style="-fx-background-color: #FF9999;" text="Reset" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0">
+   <AnchorPane layoutX="300.0" layoutY="100.0" AnchorPane.bottomAnchor="235.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
+      <TextField fx:id="rowsAndColsEntry" prefWidth="50.0" promptText="3" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
+      <TextField fx:id="comboEntry" layoutX="20.0" layoutY="55.0" prefWidth="50.0" promptText="3" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="40.0" />
+      <Button layoutX="20.0" layoutY="118.0" mnemonicParsing="false" onAction="#resetOptions" style="-fx-background-color: #FF9999;" text="Reset" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0">
          <font>
             <Font name="Consolas Bold" size="12.0" />
          </font>
       </Button>
+      <Label alignment="CENTER" layoutX="86.0" layoutY="11.0" prefWidth="200.0" text="(games with Medium/Hard AI will always be 3 by 3)" wrapText="true" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="10.0">
+         <font>
+            <Font name="Consolas" size="11.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="80.0" layoutY="39.0" prefWidth="200.0" text="(the combo can't be superior to the number of rows/columns)" wrapText="true" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="40.0">
+         <font>
+            <Font name="Consolas" size="11.0" />
+         </font>
+      </Label>
    </AnchorPane>
-   <Label alignment="CENTER" layoutX="210.0" layoutY="35.0" prefWidth="200.0" text="AI TRAINING" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="220.0">
+   <Label fx:id="savedPopUp" alignment="CENTER" layoutX="110.0" layoutY="60.0" opacity="0.0" prefWidth="200.0" text="Saved!" textFill="LIME" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="180.0">
+      <font>
+         <Font name="Consolas Bold" size="14.0" />
+      </font>
+   </Label>
+   <Label alignment="CENTER" layoutX="210.0" layoutY="35.0" prefWidth="200.0" text="AI TRAINING" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="210.0">
       <font>
          <Font name="Consolas Bold" size="32.0" />
       </font>
    </Label>
-   <AnchorPane layoutX="24.0" layoutY="194.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="270.0">
+   <AnchorPane layoutX="24.0" layoutY="194.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="260.0">
       <Label alignment="CENTER" layoutX="82.0" prefHeight="25.0" prefWidth="200.0" text="Medium difficulty AI" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font name="Consolas" size="16.0" />
@@ -79,7 +88,7 @@
          <TextField fx:id="mediumAITrainsEntry" layoutX="17.0" layoutY="31.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" prefWidth="100.0" promptText="10000" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="30.0" />
       </AnchorPane>
    </AnchorPane>
-   <AnchorPane layoutX="10.0" layoutY="280.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="270.0">
+   <AnchorPane layoutX="10.0" layoutY="280.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="260.0">
       <Label alignment="CENTER" layoutX="82.0" prefHeight="25.0" prefWidth="200.0" text="Hard difficulty AI" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font name="Consolas" size="16.0" />
@@ -106,12 +115,12 @@
          <TextField fx:id="hardAITrainsEntry" layoutX="17.0" layoutY="31.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" prefWidth="100.0" promptText="10000" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="30.0" />
       </AnchorPane>
    </AnchorPane>
-   <Button layoutX="92.0" layoutY="355.0" mnemonicParsing="false" style="-fx-background-color: #99FFFF;" text="Train medium AI" AnchorPane.topAnchor="355.0">
+   <Button layoutX="92.0" layoutY="355.0" mnemonicParsing="false" style="-fx-background-color: #99FFFF;" text="Train medium AI" AnchorPane.topAnchor="345.0">
       <font>
          <Font name="Consolas Bold" size="12.0" />
       </font>
    </Button>
-   <Button layoutX="399.0" layoutY="355.0" mnemonicParsing="false" style="-fx-background-color: #99FFFF;" text="Train hard AI" AnchorPane.topAnchor="355.0">
+   <Button layoutX="399.0" layoutY="355.0" mnemonicParsing="false" style="-fx-background-color: #99FFFF;" text="Train hard AI" AnchorPane.topAnchor="345.0">
       <font>
          <Font name="Consolas Bold" size="12.0" />
       </font>
