--- a/src/Game/options.fxml
+++ b/src/Game/options.fxml
@@ -115,12 +115,12 @@
          <TextField fx:id="hardAITrainsEntry" layoutX="17.0" layoutY="31.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" prefWidth="100.0" promptText="10000" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="30.0" />
       </AnchorPane>
    </AnchorPane>
-   <Button layoutX="92.0" layoutY="355.0" mnemonicParsing="false" style="-fx-background-color: #99FFFF;" text="Train medium AI" AnchorPane.topAnchor="345.0">
+   <Button layoutX="92.0" layoutY="355.0" mnemonicParsing="false" onAction="#trainMediumAI" style="-fx-background-color: #99FFFF;" text="Train medium AI" AnchorPane.topAnchor="345.0">
       <font>
          <Font name="Consolas Bold" size="12.0" />
       </font>
    </Button>
-   <Button layoutX="399.0" layoutY="355.0" mnemonicParsing="false" style="-fx-background-color: #99FFFF;" text="Train hard AI" AnchorPane.topAnchor="345.0">
+   <Button layoutX="399.0" layoutY="355.0" mnemonicParsing="false" onAction="#trainHardAI" style="-fx-background-color: #99FFFF;" text="Train hard AI" AnchorPane.topAnchor="345.0">
       <font>
          <Font name="Consolas Bold" size="12.0" />
       </font>
