--- a/src/Game/options.fxml
+++ b/src/Game/options.fxml
@@ -125,10 +125,15 @@
          <Font name="Consolas Bold" size="12.0" />
       </font>
    </Button>
-   <Label alignment="CENTER" layoutX="210.0" layoutY="230.0" prefWidth="200.0" text="Current training session progress:" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="385.0">
+   <Label alignment="CENTER" layoutX="210.0" layoutY="230.0" prefWidth="200.0" text="Current training session progress:" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="385.0">
       <font>
          <Font name="Consolas Bold" size="14.0" />
       </font>
    </Label>
-   <ProgressBar fx:id="trainingSessionProgress" layoutX="207.0" layoutY="397.0" prefWidth="200.0" progress="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="405.0" />
+   <ProgressBar fx:id="trainingSessionProgress" layoutX="207.0" layoutY="397.0" prefWidth="200.0" progress="1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="405.0" />
+   <Label fx:id="progressPercentage" layoutX="370.0" layoutY="385.0" prefWidth="200.0" text="100%" AnchorPane.leftAnchor="420.0" AnchorPane.rightAnchor="140.0">
+      <font>
+         <Font name="Consolas Bold" size="14.0" />
+      </font>
+   </Label>
 </AnchorPane>
